plugins {
  id 'java'
  id 'org.springframework.boot' version '3.4.5' apply false
  id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
  group = 'gems.com'
  version = '1.0.0'

  repositories {
    mavenCentral()
  }
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'jacoco'
  apply plugin: 'org.springframework.boot'
  apply plugin: 'io.spring.dependency-management'

  if (project.name == 'shared') {
    bootJar {
      enabled = false
    }
    jar {
      enabled = true
    }
  }

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(24)
    }
  }


  dependencies {
    if (project.name != 'shared') {
      implementation 'org.springframework.boot:spring-boot-starter'
      implementation 'org.springframework.boot:spring-boot-starter-webflux'
      testImplementation 'org.springframework.boot:spring-boot-starter-test'
      testImplementation 'io.projectreactor:reactor-test'
    }

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  }


  test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
  }

  jacocoTestReport {
    dependsOn test
    reports {
      xml.required = true
      html.required = true
      csv.required = false
    }
    afterEvaluate {
      classDirectories.setFrom(
        files(classDirectories.files.collect {
          fileTree(it).matching {
            include '**/*UseCase.class'
            include '**/*Adapter.class'
            include '**/*Controller.class'
            include '**/domain/entities/**/*.class'
          }
        })
      )
    }
  }

  jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    afterEvaluate {
      classDirectories.setFrom(
        files(classDirectories.files.collect {
          fileTree(it).matching {
            include '**/*UseCase.class'
            include '**/*Adapter.class'
            include '**/*Controller.class'
            include '**/domain/entities/**/*.class'
          }
        })
      )
    }
    violationRules {
      rule {
        limit {
          minimum = 1.0
        }
      }
    }
  }

  check.dependsOn jacocoTestCoverageVerification
}